Need to get javafx module in rails call